--- a/templates/resume.html
+++ b/templates/resume.html
@@ -81,9 +81,9 @@
                 </div>
             </div>
         </div>
-        <!-- Project-->
+        <!-- Resume-->
         <div class="">
-            Here is project page
+            This is Resume Page
 
         </div>
     </div>
