--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,3 +57,9 @@ a {
 .paddbottom10px {
     padding-bottom: 9px;
 }
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: rgb(210, 210, 210);
+}
