--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/static/css/sidebarNav.css">
     <link rel="stylesheet" href="/static/css/aboutMe.css">
     <link rel="stylesheet" href="/static/css/project.css">
-
 </head>
 
 <body>
@@ -80,7 +79,7 @@
                         <h3>Projects</h3>
                     </div>
                 </a>
-                <a href="">
+                <a href="resume.html">
                     <div class="logo-div logo-section">
                         <img src="/static/images/resume.svg" alt="resume Logo" class="resume-icon">
                         <h3>Resume</h3>
@@ -123,7 +122,7 @@
                                 <h3>Projects</h3>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="resume.html">
                             <div class="logo-div logo-section">
                                 <img src="/static/images/resume.svg" alt="resume Logo" class="resume-icon">
                                 <h3>Resume</h3>
@@ -223,50 +222,55 @@
                 <div class="container">
                     <div class="project-grid">
                         <!-- Project Card 1 -->
-                        <div class="project-card">
-                            <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                                alt="Project 1" class="project-image">
-                            <div class="content">
-                                <h3>E-commerce Platform</h3>
-                                <p>A fully functional e-commerce website with product listings, cart functionality, and
-                                    secure checkout process.</p>
-                                <div class="stack">
-                                    <span class="badge">React</span>
-                                    <span class="badge">Node.js</span>
-                                    <span class="badge">MongoDB</span>
+                        <a href="https://github.com/duyquangbui99/VidSummarizer" target="_blank">
+                            <div class="project-card">
+                                <img src="/static/images/project1.png" alt="Project 1" class="project-image">
+                                <div class="content">
+                                    <h3>E-commerce Platform</h3>
+                                    <p>A fully functional e-commerce website with product listings, cart functionality,
+                                        and
+                                        secure checkout process.</p>
+                                    <div class="stack">
+                                        <span class="badge">React</span>
+                                        <span class="badge">Node.js</span>
+                                        <span class="badge">MongoDB</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
+
                         <!-- Project Card 2 -->
-                        <div class="project-card">
-                            <img src="https://images.unsplash.com/photo-1551739440-5dd934d3a94a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                                alt="Project 2" class="project-image">
-                            <div class="content">
-                                <h3>Task Management App</h3>
-                                <p>A collaborative task management application with real-time updates, user
-                                    authentication, and project tracking.</p>
-                                <div class="stack">
-                                    <span class="badge">Vue.js</span>
-                                    <span class="badge">Firebase</span>
-                                    <span class="badge">Vuex</span>
+                        <a href="https://github.com/duyquangbui99/math-bingo" target="_blank">
+                            <div class="project-card">
+                                <img src="/static/images/project2.png" alt="Project 2" class="project-image">
+                                <div class="content">
+                                    <h3>Task Management App</h3>
+                                    <p>A collaborative task management application with real-time updates, user
+                                        authentication, and project tracking.</p>
+                                    <div class="stack">
+                                        <span class="badge">Vue.js</span>
+                                        <span class="badge">Firebase</span>
+                                        <span class="badge">Vuex</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                         <!-- Project Card 3 -->
-                        <div class="project-card">
-                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1415&q=80"
-                                alt="Project 3" class="project-image">
-                            <div class="content">
-                                <h3>Weather Forecast Dashboard</h3>
-                                <p>An interactive weather forecast dashboard with location-based services and data
-                                    visualization.</p>
-                                <div class="stack">
-                                    <span class="badge">React</span>
-                                    <span class="badge">Express.js</span>
-                                    <span class="badge">Chart.js</span>
+                        <a href="https://github.com/duyquangbui99/Support-Chatbot" target="_blank">
+                            <div class="project-card">
+                                <img src="/static/images/project3.png" alt="Project 3" class="project-image">
+                                <div class="content">
+                                    <h3>Weather Forecast Dashboard</h3>
+                                    <p>An interactive weather forecast dashboard with location-based services and data
+                                        visualization.</p>
+                                    <div class="stack">
+                                        <span class="badge">React</span>
+                                        <span class="badge">Express.js</span>
+                                        <span class="badge">Chart.js</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
 
