--- a/templates/resume.html
+++ b/templates/resume.html
@@ -8,9 +8,11 @@
     <title> Quang Bui</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/sidebarNav.css">
+    <link rel="stylesheet" href="/static/css/resume.css">
 </head>
 
 <body>
+
     <div class="flex-row">
         <!-- Sidebar for larger screens -->
         <div class="main-sidebar">
@@ -22,8 +24,8 @@
                     <img src="/static/images/address.svg" alt="Address Pin" class="address-pin">
                     <p>Tulsa, Oklahoma</p>
                 </div>
-
                 <div class="line-break"></div>
+
                 <div class="logo-div">
                     <a href="https://www.linkedin.com/in/duyquangbui99/" target="_blank">
                         <img src="/static/images/linkedin.svg" alt="LinkedIn Logo" class="linkedin-icon">
@@ -32,13 +34,34 @@
                         <img src="/static/images/github.svg" alt="Github Logo" class="github-icon">
                     </a>
                 </div>
-                <div class="hire-me-button hidden-deft">
-                    <a href="">
-                        <div class="logo-div logo-section">
-                            <img src="/static/images/hireme.png" alt="hireme Logo" class="hireme-icon">
-                            <h3 class="white">Hire me</h3>
+                <!-- Hidden Sidebar items for navigation for smaller screen-->
+                <div class="padd20 hidden-deft">
+                    <a href="index.html">
+                        <div class="logo-div">
+                            <img src="/static/images/person.svg" alt="person Logo" class="person-icon">
+                            <h3>About Me</h3>
                         </div>
                     </a>
+                    <a href="#projects">
+                        <div class="logo-div">
+                            <img src="/static/images/project.svg" alt="project Logo" class="project-icon">
+                            <h3>Projects</h3>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="logo-div logo-section">
+                            <img src="/static/images/resume.svg" alt="resume Logo" class="resume-icon">
+                            <h3>Resume</h3>
+                        </div>
+                    </a>
+                    <div class="hire-me-button">
+                        <a href="">
+                            <div class="logo-div logo-section">
+                                <img src="/static/images/hireme.png" alt="hireme Logo" class="hireme-icon">
+                                <h3 class="white">Hire me</h3>
+                            </div>
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -50,13 +73,13 @@
                         <h3>About Me</h3>
                     </div>
                 </a>
-                <a href="">
+                <a href="#projects">
                     <div class="logo-div">
                         <img src="/static/images/project.svg" alt="project Logo" class="project-icon">
                         <h3>Projects</h3>
                     </div>
                 </a>
-                <a href="">
+                <a href="resume.html">
                     <div class="logo-div logo-section">
                         <img src="/static/images/resume.svg" alt="resume Logo" class="resume-icon">
                         <h3>Resume</h3>
@@ -66,7 +89,7 @@
                     <a href="">
                         <div class="logo-div logo-section">
                             <img src="/static/images/hireme.png" alt="hireme Logo" class="hireme-icon">
-                            <h3 class="white">Hire me</h3>
+                            <h2 class="white">Hire me</h2>
                         </div>
                     </a>
                 </div>
@@ -81,13 +104,163 @@
                 </div>
             </div>
         </div>
-        <!-- Resume-->
-        <div class="">
-            This is Resume Page
+        <!-- Resume -->
+        <div>
+            <div class="container">
+                <header class="header">
+                    <h1>Quang Bui</h1>
+                    <div class="contact-info">
+                        <p>Tulsa, Oklahoma 74134</p>
+                        <p>(539) 292-6908 | qbuiforwork@gmail.com</p>
+                        <div class="links">
+                            <a href="https://www.linkedin.com/in/quang-bui-4b7059256/">LinkedIn</a>
+                            <a href="https://github.com/duyquangbui99">GitHub</a>
+                            <a href="index.html">Personal Website</a>
+                        </div>
+                    </div>
+                </header>
 
+                <section class="education">
+                    <h2>Education</h2>
+                    <div class="line"></div>
+                    <div>
+                        <h3>Master's in Computer Science</h3>
+                        <p>Oklahoma City University (2024-2026)</p>
+                    </div>
+                    <div>
+                        <h3>Bachelor's in Computer Science</h3>
+                        <p>Northeastern State University (2020-2023)</p>
+                        <p class="italic">Summa Cum Laude: Graduated with honors</p>
+                    </div>
+                </section>
+
+                <section class="skills">
+                    <h2>Technical Skills</h2>
+                    <div class="line"></div>
+                    <div class="grid">
+                        <div>
+                            <h3>Programming Languages:</h3>
+                            <p>C#, JavaScript, Python, C/C++</p>
+                        </div>
+                        <div>
+                            <h3>Tools & Technologies:</h3>
+                            <p>VS Code, Git, MongoDB, ReactJS, Node.js</p>
+                            <p>Tailwind, Bootstrap, Game Development.</p>
+                        </div>
+                        <div>
+                            <h3>Languages:</h3>
+                            <p>English, Vietnamese</p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="work-experience">
+                    <h2>Work Experience</h2>
+                    <div class="line"></div>
+                    <div>
+                        <h3>Software Engineer</h3>
+                        <p>Tranquility Nail and Spa (June 2023 - May 2024)</p>
+                        <div class="project-def">
+                            <p> ● Developed a customer feedback app with 1 other team member using the MERN stack
+                                (MongoDB,
+                                Express.js, React.js, Node.js), enabling efficient customer-employee communication.</p>
+                            <p>
+                                ● Designed and developed the front-end application using React.js, implementing
+                                responsive
+                                UI
+                                components and integrating with back-end APIs built using Node.js and Express.js to
+                                manage
+                                user
+                                authentication, customer feedback. Enhancing customer satisfaction by 20% through
+                                streamlined
+                                feedback loops.
+                            </p>
+                            <p> ● Implemented manager-employee communication features, leading to a 15% improvement in
+                                employee
+                                performance and customer retention.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="projects">
+
+                    <h2>Project Experience</h2>
+                    <div class="line"></div>
+                    <div>
+                        <h3>VidSummarizer</h3>
+                        <div class="project-def">
+                            <p>● Developed an AI-driven application to convert YouTube video content into concise
+                                summaries
+                                using OpenAI's GPT models, Langchain framework, Python and Flask, enhancing content
+                                digestibility and accessibility </p>
+                            <p>
+                                ● Designed and implemented a responsive web interface that allows users to easily input
+                                video
+                                URLs and display summaries, utilizing HTML, CSS, and JavaScript.
+                            </p>
+                            <p>
+                                ● Ensured robust application performance and security by integrating CORS in Flask,
+                                achieving a
+                                significant improvement in response efficiency.
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Math Bingo</h3>
+                        <div class="project-def">
+                            <p>
+                                ● Developed an engaging Math Bingo game with a modern interface and dynamic animations,
+                                utilizing HTML, CSS, and JavaScript to enhance user experience and interactivity.
+                            </p>
+                            <p>
+                                ● Integrated real-time gameplay features and optimized user interface elements,
+                                leveraging
+                                JavaScript for interactive functionality and CSS animations for visually appealing
+                                effects.
+                            </p>
+                            <p>
+                                ● Collaborated in a team environment using Git for version control, ensuring efficient
+                                code
+                                management and smooth project workflow across multiple contributors.
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Sudoku Solver</h3>
+                        <div class="project-def">
+                            <p>
+                                ● Develop a fully functional Sudoku game with a GUI using Python and Tkinter.
+                            </p>
+                            <p>
+                                ● Developed a Sudoku solving algorithm to provide hints and solutions for user-generated
+                                puzzles.
+                            </p>
+                            <p>
+                                ● Incorporated features for submitting solutions, starting new games, and tracking
+                                elapsed
+                                time during gameplay.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="awards">
+                    <h2>Awards</h2>
+                    <div class="line"></div>
+                    <ul>
+                        <li>International Scholarship: Awarded by Northeastern State University</li>
+                        <li>Dean's List: Acknowledged at both Northeastern State University and Tulsa Community College
+                        </li>
+                    </ul>
+                </section>
+
+                <footer class="footer">
+                    <p>&copy; 2024 Quang Bui. All rights reserved.</p>
+                </footer>
+            </div>
         </div>
-    </div>
-    <script src="/static/js/scipt.js"></script>
+        <script src="/static/js/scipt.js"></script>
 </body>
 
 </html>
