--- a/static/css/project.css
+++ b/static/css/project.css
@@ -156,6 +156,7 @@ input:focus {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
+    height: 450px;
 }
 
 .project-card:hover {
