--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
                     </div>
                 </div>
 
-                <h1>MORE PROJECTS</h1>
+                <h1 style="padding-top: 30px;">MORE PROJECTS</h1>
 
                 <div class="container">
                     <div class="project-grid">
