--- a/templates/resume.html
+++ b/templates/resume.html
@@ -36,26 +36,20 @@
                 </div>
                 <!-- Hidden Sidebar items for navigation for smaller screen-->
                 <div class="padd20 hidden-deft">
-                    <a href="index.html">
+                    <a href="/index">
                         <div class="logo-div">
                             <img src="/static/images/person.svg" alt="person Logo" class="person-icon">
                             <h3>About Me</h3>
                         </div>
                     </a>
-                    <a href="#projects">
+                    <a href="/index#projects">
                         <div class="logo-div">
                             <img src="/static/images/project.svg" alt="project Logo" class="project-icon">
                             <h3>Projects</h3>
                         </div>
                     </a>
-                    <a href="">
-                        <div class="logo-div logo-section">
-                            <img src="/static/images/resume.svg" alt="resume Logo" class="resume-icon">
-                            <h3>Resume</h3>
-                        </div>
-                    </a>
                     <div class="hire-me-button">
-                        <a href="">
+                        <a href="/index#contact">
                             <div class="logo-div logo-section">
                                 <img src="/static/images/hireme.png" alt="hireme Logo" class="hireme-icon">
                                 <h3 class="white">Hire me</h3>
@@ -67,26 +61,21 @@
             </div>
             <!-- Sidebar items for navigation -->
             <div class="side-bar nav-items" id="nav-items">
-                <a href="index.html">
+                <a href="/index">
                     <div class="logo-div">
                         <img src="/static/images/person.svg" alt="person Logo" class="person-icon">
                         <h3>About Me</h3>
                     </div>
                 </a>
-                <a href="#projects">
+                <a href="/index#projects">
                     <div class="logo-div">
                         <img src="/static/images/project.svg" alt="project Logo" class="project-icon">
                         <h3>Projects</h3>
                     </div>
                 </a>
-                <a href="resume.html">
-                    <div class="logo-div logo-section">
-                        <img src="/static/images/resume.svg" alt="resume Logo" class="resume-icon">
-                        <h3>Resume</h3>
-                    </div>
                 </a>
                 <div class="hire-me-button">
-                    <a href="">
+                    <a href="/index#contact">
                         <div class="logo-div logo-section">
                             <img src="/static/images/hireme.png" alt="hireme Logo" class="hireme-icon">
                             <h2 class="white">Hire me</h2>
@@ -113,9 +102,9 @@
                         <p>Tulsa, Oklahoma 74134</p>
                         <p>(539) 292-6908 | qbuiforwork@gmail.com</p>
                         <div class="links">
-                            <a href="https://www.linkedin.com/in/quang-bui-4b7059256/">LinkedIn</a>
-                            <a href="https://github.com/duyquangbui99">GitHub</a>
-                            <a href="index.html">Personal Website</a>
+                            <a href="https://www.linkedin.com/in/quang-bui-4b7059256/" target="_blank">LinkedIn</a>
+                            <a href="https://github.com/duyquangbui99" target="_blank">GitHub</a>
+                            <a href="/index">Personal Website</a>
                         </div>
                     </div>
                 </header>
@@ -162,13 +151,16 @@
                         <p>Tranquility Nail and Spa (June 2023 - May 2024)</p>
                         <div class="project-def">
                             <p> ● Developed a customer feedback app with 1 other team member using the MERN stack
-                                (MongoDB,
-                                Express.js, React.js, Node.js), enabling efficient customer-employee communication.</p>
+                                <span style="font-weight: 500;">(MongoDB,
+                                    Express.js, React.js, Node.js)</span>, enabling efficient customer-employee
+                                communication.
+                            </p>
                             <p>
                                 ● Designed and developed the front-end application using React.js, implementing
                                 responsive
                                 UI
-                                components and integrating with back-end APIs built using Node.js and Express.js to
+                                components and integrating with <span style="font-weight: 500;">back-end APIs</span>
+                                built using Node.js and Express.js to
                                 manage
                                 user
                                 authentication, customer feedback. Enhancing customer satisfaction by 20% through
@@ -190,14 +182,17 @@
                     <div>
                         <h3>VidSummarizer</h3>
                         <div class="project-def">
-                            <p>● Developed an AI-driven application to convert YouTube video content into concise
+                            <p>● Developed an <span style="font-weight: 500;">AI-driven</span> application to convert
+                                YouTube video content into concise
                                 summaries
-                                using OpenAI's GPT models, Langchain framework, Python and Flask, enhancing content
+                                using <span style="font-weight: 500;">OpenAI's GPT models, Langchain framework, Python
+                                    and Flask</span>, enhancing content
                                 digestibility and accessibility </p>
                             <p>
                                 ● Designed and implemented a responsive web interface that allows users to easily input
                                 video
-                                URLs and display summaries, utilizing HTML, CSS, and JavaScript.
+                                URLs and display summaries, utilizing <span style="font-weight: 500;">HTML, CSS, and
+                                    JavaScript.</span>
                             </p>
                             <p>
                                 ● Ensured robust application performance and security by integrating CORS in Flask,
@@ -211,7 +206,8 @@
                         <div class="project-def">
                             <p>
                                 ● Developed an engaging Math Bingo game with a modern interface and dynamic animations,
-                                utilizing HTML, CSS, and JavaScript to enhance user experience and interactivity.
+                                utilizing <span style="font-weight: 500;">HTML, CSS, and JavaScript</span> to enhance
+                                user experience and interactivity.
                             </p>
                             <p>
                                 ● Integrated real-time gameplay features and optimized user interface elements,
@@ -220,7 +216,8 @@
                                 effects.
                             </p>
                             <p>
-                                ● Collaborated in a team environment using Git for version control, ensuring efficient
+                                ● Collaborated in a team environment using <span style="font-weight: 500;">Git for
+                                    version control</span>, ensuring efficient
                                 code
                                 management and smooth project workflow across multiple contributors.
                             </p>
@@ -230,7 +227,8 @@
                         <h3>Sudoku Solver</h3>
                         <div class="project-def">
                             <p>
-                                ● Develop a fully functional Sudoku game with a GUI using Python and Tkinter.
+                                ● Develop a fully functional Sudoku game with a GUI using <span
+                                    style="font-weight: 500;">Python and Tkinter.</span>
                             </p>
                             <p>
                                 ● Developed a Sudoku solving algorithm to provide hints and solutions for user-generated
