--- a/templates/resume.html
+++ b/templates/resume.html
@@ -18,7 +18,7 @@
         <div class="main-sidebar">
             <div class="nav-side-bar side-bar" id="sidebar">
                 <h2>Quang Bui</h2>
-                <img src="/static/images/avatar.JPG" alt="avatar" class="img-ava">
+                <img src="/static/images/avatar.png" alt="avatar" class="img-ava">
                 <p>Hi, my name is Quang Bui, a Graduate Student at Okahoma City University</p>
                 <div class="logo-div">
                     <img src="/static/images/address.svg" alt="Address Pin" class="address-pin">
