--- a/templates/resume.html
+++ b/templates/resume.html
@@ -115,6 +115,7 @@
                     <div>
                         <h3>Master's in Computer Science</h3>
                         <p>Oklahoma City University (2024-2026)</p>
+                        <p>GPA: 4.0</p>
                     </div>
                     <div>
                         <h3>Bachelor's in Computer Science</h3>
